--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.18.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-globe.gl": "^2.30.0",
     "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.6.0",
     "three": "^0.172.0",
