--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.30.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
+    "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
     "three": "^0.172.0",
     "three-globe": "^2.40.2"
